--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
+      The easiest way to set up icon fonts for use in any web page is through Google Fonts
+      See: https://developers.google.com/fonts/docs/material_icons
+    -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
